@@ -1,9 +1,11 @@
 package ti4.map;
 
-import static org.apache.commons.collections4.CollectionUtils.*;
+import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 
 import java.awt.Point;
 import java.lang.reflect.Field;
+import java.sql.Timestamp;
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.Period;
 import java.time.ZoneId;
@@ -195,6 +197,8 @@ public class Game extends GameProperties {
         // OTHER
         setEvents(new ArrayList<>()); // ignis_aurora
         addCustomPO(Constants.CUSTODIAN, 1);
+        setUpPeakableObjectives(5, 1);
+        setUpPeakableObjectives(5, 2);
     }
 
     public void fixScrewedSOs() {
@@ -394,6 +398,11 @@ public class Game extends GameProperties {
     }
 
     @JsonIgnore
+    public boolean hasWinner() {
+        return getWinner().isPresent();
+    }
+
+    @JsonIgnore
     public Optional<Player> getWinner() {
         Player winner = null;
         for (Player player : getRealPlayersNDummies()) {
@@ -539,7 +548,7 @@ public class Game extends GameProperties {
                 .filter(Predicate.not(c -> c.getName().contains(Constants.ACTIONS_CHANNEL_SUFFIX)))
                 .toList();
             if (gameChannels.size() == 1) {
-                tableTalkChannel = gameChannels.get(0);
+                tableTalkChannel = gameChannels.getFirst();
                 setTableTalkChannelID(tableTalkChannel.getId());
                 return tableTalkChannel;
             }
@@ -556,7 +565,7 @@ public class Game extends GameProperties {
             List<TextChannel> gameChannels = AsyncTI4DiscordBot.jda
                 .getTextChannelsByName(getName() + Constants.ACTIONS_CHANNEL_SUFFIX, true);
             if (gameChannels.size() == 1) {
-                TextChannel mainGameChannel = gameChannels.get(0);
+                TextChannel mainGameChannel = gameChannels.getFirst();
                 setMainChannelID(mainGameChannel.getId());
                 return mainGameChannel;
             }
@@ -596,10 +605,10 @@ public class Game extends GameProperties {
         // FIND BY NAME
         List<ThreadChannel> botChannels = AsyncTI4DiscordBot.jda.getThreadChannelsByName(getName() + Constants.BOT_CHANNEL_SUFFIX, true);
         if (botChannels.size() == 1) {
-            return botChannels.get(0);
+            return botChannels.getFirst();
         } else if (botChannels.size() > 1) {
             BotLogger.log(getName() + " appears to have more than one bot-map-updates channel:\n" + botChannels.stream().map(ThreadChannel::getJumpUrl).collect(Collectors.joining("\n")));
-            return botChannels.get(0);
+            return botChannels.getFirst();
         }
 
         // CHECK IF ARCHIVED
@@ -620,9 +629,7 @@ public class Game extends GameProperties {
     public ThreadChannel getLaunchPostThread() {
         if (StringUtils.isNumeric(getLaunchPostThreadID())) {
             ThreadChannel threadChannel = AsyncTI4DiscordBot.guildPrimary.getThreadChannelById(getLaunchPostThreadID());
-            if (threadChannel != null) {
-                return threadChannel;
-            }
+            return threadChannel;
         }
         return null;
     }
@@ -675,13 +682,8 @@ public class Game extends GameProperties {
     }
 
     public void clearAllEmptyStoredValues() {
-        java.util.Iterator<Map.Entry<String, String>> iterator = checkingForAllReacts.entrySet().iterator();
-        while (iterator.hasNext()) {
-            Map.Entry<String, String> entry = iterator.next();
-            if (entry.getValue() == null || entry.getValue().isEmpty()) {
-                iterator.remove(); // Remove the entry if the value is empty  
-            }
-        }
+        // Remove the entry if the value is empty
+        checkingForAllReacts.entrySet().removeIf(entry -> entry.getValue() == null || entry.getValue().isEmpty());
     }
 
     public void setStoredValue(String key, String value) {
@@ -716,7 +718,7 @@ public class Game extends GameProperties {
         List<Integer> orderedSCs = new ArrayList<>();
         int playerSC = player.getLowestSC();
         String scText = playerSC + "";
-        if (player != null && !scText.equalsIgnoreCase(getSCNumberIfNaaluInPlay(player, scText))) {
+        if (!scText.equalsIgnoreCase(getSCNumberIfNaaluInPlay(player, scText))) {
             playerSC = 0;
         }
         for (int sc : orderedSCsBasic) {
@@ -765,6 +767,23 @@ public class Game extends GameProperties {
         return null;
     }
 
+    public int getActionPhaseTurnOrder(String userId) {
+        return getActionPhaseTurnOrder().stream()
+                .map(Player::getUserID)
+                .toList()
+                .indexOf(userId);
+    }
+
+    public List<Player> getActionPhaseTurnOrder() {
+        return players.values().stream()
+                .filter(player -> !player.getSCs().isEmpty())
+                .map(player -> new ImmutablePair<>(player, Collections.min(player.getSCs())))
+                .sorted((p1, p2) -> p1.getLeft().hasTheZeroToken() ? -1 : p2.getLeft().hasTheZeroToken() ? 1 :
+                        Integer.compare(p1.getRight(), p2.getRight()))
+                .map(ImmutablePair::getLeft)
+                .toList();
+    }
+
     public DisplayType getDisplayTypeForced() {
         return displayTypeForced;
     }
@@ -806,19 +825,19 @@ public class Game extends GameProperties {
 
     public void addPlayersWhoHitPersistentNoAfter(String faction) {
         String existing = getPlayersWhoHitPersistentNoAfter();
-        if (existing != null && existing.length() > 0) existing += "_";
+        if (existing != null && !existing.isEmpty()) existing += "_";
         setPlayersWhoHitPersistentNoAfter(existing + faction);
     }
 
     public void addPlayersWhoHitPersistentNoWhen(String faction) {
         String existing = getPlayersWhoHitPersistentNoWhen();
-        if (existing != null && existing.length() > 0) existing += "_";
+        if (existing != null && !existing.isEmpty()) existing += "_";
         setPlayersWhoHitPersistentNoWhen(existing + faction);
     }
 
     public void removePlayersWhoHitPersistentNoAfter(String faction) {
         String existing = getPlayersWhoHitPersistentNoAfter();
-        if (existing != null && existing.length() > 0) {
+        if (existing != null && !existing.isEmpty()) {
             if (existing.contains(faction + "_")) {
                 faction = faction + "_";
             }
@@ -829,7 +848,7 @@ public class Game extends GameProperties {
 
     public void removePlayersWhoHitPersistentNoWhen(String faction) {
         String existing = getPlayersWhoHitPersistentNoWhen();
-        if (existing != null && existing.length() > 0) {
+        if (existing != null && !existing.isEmpty()) {
             if (existing.contains(faction + "_")) {
                 faction = faction + "_";
             }
@@ -843,6 +862,15 @@ public class Game extends GameProperties {
         return getPlayer(getActivePlayerID());
     }
 
+    @JsonIgnore
+    public Player getSpeaker() {
+        return getPlayer(getSpeakerUserID());
+    }
+
+    public void setSpeaker(Player speaker) {
+        setSpeakerUserID(speaker.getUserID());
+    }
+
     public Map<String, Integer> getCurrentMovedUnitsFrom1System() {
         return displacedUnitsFrom1System;
     }
@@ -852,11 +880,7 @@ public class Game extends GameProperties {
     }
 
     public int getSpecificThalnosUnit(String unit) {
-        if (thalnosUnits.containsKey(unit)) {
-            return thalnosUnits.get(unit);
-        } else {
-            return 0;
-        }
+        return thalnosUnits.getOrDefault(unit, 0);
     }
 
     public Map<String, Integer> getAllSlashCommandsUsed() {
@@ -932,7 +956,8 @@ public class Game extends GameProperties {
         Date newTime = new Date();
         String factionsInCombat = getStoredValue("factionsInCombat");
         Player prevPlayer = getActivePlayer();
-        if (prevPlayer != null && !factionsInCombat.contains(prevPlayer.getFaction()) && !isTemporaryPingDisable()) {
+        String prevFaction = (prevPlayer != null && prevPlayer.getFaction() != null) ? prevPlayer.getFaction() : "jazzwuzhere&p1too";
+        if (prevPlayer != null && !factionsInCombat.contains(prevFaction) && !isTemporaryPingDisable()) {
             long elapsedTime = newTime.getTime() - lastActivePlayerChange.getTime();
             prevPlayer.updateTurnStats(elapsedTime);
         } else {
@@ -1037,6 +1062,9 @@ public class Game extends GameProperties {
         publicObjectives2Peeked.remove(id);
     }
 
+    /**
+     * @return Map of (scInitiativeNum, tradeGoodCount)
+     */
     public Map<Integer, Integer> getScTradeGoods() {
         return scTradeGoods;
     }
@@ -1055,7 +1083,7 @@ public class Game extends GameProperties {
                 ButtonHelperAbilities.pillageCheck(player, this);
                 ButtonHelperAgents.resolveArtunoCheck(player, this, tradeGoodCount);
                 tradeGoodCount = 0;
-                MessageHelper.sendMessageToChannel(getActionsChannel(), "The " + (tradeGoodCount == 1 ? "TG" : tradeGoodCount + "TGs")
+                MessageHelper.sendMessageToChannel(getActionsChannel(), "The " + tradeGoodCount + "TGs"
                     + " that would be placed on the SC " + sc + " have instead been given to the Kyro Hero player, as per Kyro Hero text");
             }
         }
@@ -1066,13 +1094,13 @@ public class Game extends GameProperties {
         Set<Integer> scPickedList = new HashSet<>();
         for (Player player_ : getRealPlayers()) {
             scPickedList.addAll(player_.getSCs());
-            if (player_.getSCs().size() > 0) {
-                String scs = "";
+            if (!player_.getSCs().isEmpty()) {
+                StringBuilder scs = new StringBuilder();
                 for (int SC : player_.getSCs()) {
-                    scs = scs + SC + "_";
+                    scs.append(SC).append("_");
                 }
-                scs = scs.substring(0, scs.length() - 1);
-                setStoredValue("Round" + getRound() + "SCPickFor" + player_.getFaction(), scs);
+                scs = new StringBuilder(scs.substring(0, scs.length() - 1));
+                setStoredValue("Round" + getRound() + "SCPickFor" + player_.getFaction(), scs.toString());
             }
         }
 
@@ -1161,12 +1189,12 @@ public class Game extends GameProperties {
         if (type == 1) {
             while (publicObjectives1Peakable.size() != num) {
                 if (publicObjectives1Peakable.size() > num) {
-                    String id = publicObjectives1Peakable.remove(publicObjectives1Peakable.size() - 1);
+                    String id = publicObjectives1Peakable.removeLast();
                     publicObjectives1.add(id);
                     Collections.shuffle(publicObjectives1);
                 } else {
                     Collections.shuffle(publicObjectives1);
-                    String id = publicObjectives1.get(0);
+                    String id = publicObjectives1.getFirst();
                     publicObjectives1.remove(id);
                     publicObjectives1Peakable.add(id);
                 }
@@ -1174,12 +1202,12 @@ public class Game extends GameProperties {
         } else {
             while (publicObjectives2Peakable.size() != num) {
                 if (publicObjectives2Peakable.size() > num) {
-                    String id = publicObjectives2Peakable.remove(publicObjectives2Peakable.size() - 1);
+                    String id = publicObjectives2Peakable.removeLast();
                     publicObjectives2.add(id);
                     Collections.shuffle(publicObjectives2);
                 } else {
                     Collections.shuffle(publicObjectives2);
-                    String id = publicObjectives2.get(0);
+                    String id = publicObjectives2.getFirst();
                     publicObjectives2.remove(id);
                     publicObjectives2Peakable.add(id);
                 }
@@ -1192,13 +1220,13 @@ public class Game extends GameProperties {
             for (int x = 0; x < num; x++) {
                 if (!publicObjectives1.isEmpty()) {
                     Collections.shuffle(publicObjectives1);
-                    String id = publicObjectives1.get(0);
+                    String id = publicObjectives1.getFirst();
                     publicObjectives1.remove(id);
                     publicObjectives1Peakable.add(id);
                 }
                 if (!publicObjectives2.isEmpty()) {
                     Collections.shuffle(publicObjectives2);
-                    String id = publicObjectives2.get(0);
+                    String id = publicObjectives2.getFirst();
                     publicObjectives2.remove(id);
                     publicObjectives2Peakable.add(id);
                 }
@@ -1283,11 +1311,11 @@ public class Game extends GameProperties {
 
     public String getTopObjective(int stage1Or2) {
         if (stage1Or2 == 1) {
-            String id = publicObjectives1.get(0);
+            String id = publicObjectives1.getFirst();
             publicObjectives1.remove(id);
             return id;
         } else {
-            String id = publicObjectives2.get(0);
+            String id = publicObjectives2.getFirst();
             publicObjectives2.remove(id);
             return id;
         }
@@ -1308,11 +1336,11 @@ public class Game extends GameProperties {
 
     public Entry<String, Integer> revealObjective(List<String> objectiveList) {
         if (!objectiveList.isEmpty()) {
-            String id = objectiveList.get(0);
+            String id = objectiveList.getFirst();
             objectiveList.remove(id);
             int counter = 20;
-            while (revealedPublicObjectives.keySet().contains(id) && objectiveList.size() > 1 && counter > 0) {
-                id = objectiveList.get(0);
+            while (revealedPublicObjectives.containsKey(id) && objectiveList.size() > 1 && counter > 0) {
+                id = objectiveList.getFirst();
                 objectiveList.remove(id);
                 counter = counter - 1;
             }
@@ -1399,8 +1427,8 @@ public class Game extends GameProperties {
         }
         if (!idC.isEmpty()) {
             List<String> scoredPlayerList = scoredPublicObjectives.computeIfAbsent(idC, key -> new ArrayList<>());
-            if (scoredPlayerList.size() > 0) {
-                String playerID = scoredPlayerList.get(0);
+            if (!scoredPlayerList.isEmpty()) {
+                String playerID = scoredPlayerList.getFirst();
                 for (Player player : getRealAndEliminatedPlayers()) {
                     if (player.getUserID().equalsIgnoreCase(playerID)) {
                         return player.getFaction();
@@ -1431,7 +1459,7 @@ public class Game extends GameProperties {
             }
         }
 
-        if (getRound() > 1 && discardAgendas.size() > 0) {
+        if (getRound() > 1 && !discardAgendas.isEmpty()) {
             custodiansTaken = true;
         }
         for (Player p : getRealPlayers()) {
@@ -1637,6 +1665,9 @@ public class Game extends GameProperties {
         soToPoList.remove(id);
     }
 
+    /**
+     * @return Map of (ObjectiveModelID or ProperName if Custom, List of ({@link Player#getUserID}))
+     */
     public Map<String, List<String>> getScoredPublicObjectives() {
         return scoredPublicObjectives;
     }
@@ -1809,7 +1840,6 @@ public class Game extends GameProperties {
             }
         }
         if (!id.isEmpty()) {
-
             Collection<Integer> values = laws.values();
             int identifier = ThreadLocalRandom.current().nextInt(1000);
             while (values.contains(identifier)) {
@@ -1822,7 +1852,7 @@ public class Game extends GameProperties {
             }
             if (getLaws().size() > 2) {
                 for (Player p : getRealPlayers()) {
-                    if (p.getSecretsUnscored().keySet().contains("dp")) {
+                    if (p.getSecretsUnscored().containsKey("dp")) {
                         MessageHelper.sendMessageToChannel(p.getCardsInfoThread(), p.getRepresentationUnfogged() + " reminder that you have dictate policy and a 3rd law just got put into play");
                     }
                 }
@@ -1833,7 +1863,6 @@ public class Game extends GameProperties {
     }
 
     public boolean reviseLaw(Integer idNumber, String optionalText) {
-
         String id = "";
         for (Entry<String, Integer> ac : laws.entrySet()) {
             if (ac.getValue().equals(idNumber)) {
@@ -1893,8 +1922,7 @@ public class Game extends GameProperties {
     }
 
     public void shuffleAllAgendasBackIntoDeck() {
-        List<String> discardedAgendasIDs = new ArrayList<>();
-        discardedAgendasIDs.addAll(discardAgendas.keySet());
+        List<String> discardedAgendasIDs = new ArrayList<>(discardAgendas.keySet());
         for (String id : discardedAgendasIDs) {
             discardAgendas.remove(id);
             getAgendas().add(id);
@@ -1929,7 +1957,7 @@ public class Game extends GameProperties {
         }
         if (!id.isEmpty()) {
             discardedEvents.remove(id);
-            getEvents().add(0, id);
+            getEvents().addFirst(id);
             return true;
         }
         return false;
@@ -1945,7 +1973,7 @@ public class Game extends GameProperties {
         }
         if (!id.isEmpty()) {
             discardAgendas.remove(id);
-            getAgendas().add(0, id);
+            getAgendas().addFirst(id);
             return true;
         }
         return false;
@@ -1954,7 +1982,7 @@ public class Game extends GameProperties {
     public boolean putAgendaBackIntoDeckOnTop(String id) {
         if (!id.isEmpty()) {
             discardAgendas.remove(id);
-            getAgendas().add(0, id);
+            getAgendas().addFirst(id);
             return true;
         }
         return false;
@@ -2048,7 +2076,7 @@ public class Game extends GameProperties {
                 }
             }
             if (!id.isEmpty()) {
-                getEvents().add(0, id);
+                getEvents().addFirst(id);
                 player.removeEvent(id);
                 return true;
             }
@@ -2085,7 +2113,7 @@ public class Game extends GameProperties {
             }
             if (!id.isEmpty()) {
                 getAgendas().remove(id);
-                getAgendas().add(0, id);
+                getAgendas().addFirst(id);
                 sentAgendas.remove(id);
                 return true;
             }
@@ -2240,7 +2268,7 @@ public class Game extends GameProperties {
         List<String> acsToShuffle = discardActionCards.keySet().stream().toList();
         getActionCards().addAll(acsToShuffle);
         Collections.shuffle(getActionCards());
-        acsToShuffle.stream().forEach(ac -> discardActionCards.remove(ac)); //clear out the shuffled back cards
+        acsToShuffle.forEach(ac -> discardActionCards.remove(ac)); //clear out the shuffled back cards
         String msg = "#" + getPing() + " shuffling the discarded ACs into the action card deck because the action card deck ran out of cards";
         MessageHelper.sendMessageToChannel(getMainGameChannel(), msg);
     }
@@ -2248,7 +2276,7 @@ public class Game extends GameProperties {
     @Nullable
     public Map<String, Integer> drawActionCard(String userID) {
         if (!getActionCards().isEmpty()) {
-            String id = getActionCards().get(0);
+            String id = getActionCards().getFirst();
             Player player = getPlayer(userID);
             if (player != null) {
                 getActionCards().remove(id);
@@ -2265,7 +2293,7 @@ public class Game extends GameProperties {
     @Nullable
     public Map<String, Integer> drawEvent(String userID) {
         if (!getEvents().isEmpty()) {
-            String id = getEvents().get(0);
+            String id = getEvents().getFirst();
             Player player = getPlayer(userID);
             if (player != null) {
                 getEvents().remove(id);
@@ -2367,7 +2395,7 @@ public class Game extends GameProperties {
         } // end of migration code
 
         if (!deck.isEmpty()) {
-            String id = deck.get(0);
+            String id = deck.getFirst();
             discardExplore(id);
             result = id;
         }
@@ -2385,8 +2413,7 @@ public class Game extends GameProperties {
 
     public void shuffleDiscardsIntoExploreDeck(String reqType) {
         List<String> discardsOfType = getExplores(reqType, discardExplore);
-        List<String> anotherList = new ArrayList<>();
-        anotherList.addAll(discardsOfType);
+        List<String> anotherList = new ArrayList<>(discardsOfType);
         for (String explore : anotherList) {
             addExplore(explore);
         }
@@ -2424,8 +2451,7 @@ public class Game extends GameProperties {
     }
 
     public void resetExploresOfCertainType(String reqType) {
-        List<String> deck = new ArrayList<>();
-        deck.addAll(explore);
+        List<String> deck = new ArrayList<>(explore);
         for (String id : deck) {
             ExploreModel card = Mapper.getExplore(id);
             if (card != null) {
@@ -2435,8 +2461,7 @@ public class Game extends GameProperties {
                 }
             }
         }
-        deck = new ArrayList<>();
-        deck.addAll(discardExplore);
+        deck = new ArrayList<>(discardExplore);
         for (String id : deck) {
             ExploreModel card = Mapper.getExplore(id);
             if (card != null) {
@@ -2446,10 +2471,8 @@ public class Game extends GameProperties {
                 }
             }
         }
-        deck = new ArrayList<>();
-        deck.addAll(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
-        List<String> deck2 = new ArrayList<>();
-        deck2.addAll(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
+        deck = new ArrayList<>(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
+        List<String> deck2 = new ArrayList<>(Mapper.getDecks().get(getExplorationDeckID()).getNewShuffledDeck());
         for (String id : deck2) {
             ExploreModel card = Mapper.getExplore(id);
             if (card != null) {
@@ -2466,8 +2489,7 @@ public class Game extends GameProperties {
 
     public void triplicateExplores() {
         explore = Mapper.getDecks().get("explores_pok").getNewDeck();
-        List<String> exp2 = new ArrayList<>();
-        exp2.addAll(explore);
+        List<String> exp2 = new ArrayList<>(explore);
         for (String card : exp2) {
             explore.add(card + "extra1");
             explore.add(card + "extra2");
@@ -2490,8 +2512,7 @@ public class Game extends GameProperties {
 
     private List<String> multiplyDeck(int totalCopies, String... deckIDs) {
         List<String> newDeck = Arrays.stream(deckIDs).flatMap(deckID -> Mapper.getDecks().get(deckID).getNewDeck().stream()).toList();
-        List<String> newDeck2 = new ArrayList<>();
-        newDeck2.addAll(newDeck);
+        List<String> newDeck2 = new ArrayList<>(newDeck);
         for (String card : newDeck)
             for (int i = 1; i < totalCopies; i++)
                 newDeck2.add(card + "extra" + i);
@@ -2526,7 +2547,7 @@ public class Game extends GameProperties {
     @Nullable
     public String drawActionCardAndDiscard() {
         if (!getActionCards().isEmpty()) {
-            String id = getActionCards().get(0);
+            String id = getActionCards().getFirst();
             getActionCards().remove(id);
             setDiscardActionCard(id);
             return id;
@@ -2544,7 +2565,7 @@ public class Game extends GameProperties {
             MessageHelper.sendMessageToChannel(player.getCardsInfoThread(), msg);
             String secretScoreMsg = "Click a button below to discard your Secret Objective";
             List<Button> soButtons = SOInfo.getUnscoredSecretObjectiveDiscardButtons(this, player);
-            if (soButtons != null && !soButtons.isEmpty()) {
+            if (!soButtons.isEmpty()) {
                 MessageHelper.sendMessageToChannelWithButtons(player.getCardsInfoThread(), secretScoreMsg,
                     soButtons);
             } else {
@@ -2556,7 +2577,7 @@ public class Game extends GameProperties {
 
     public void drawSecretObjective(String userID) {
         if (!getSecretObjectives().isEmpty()) {
-            String id = getSecretObjectives().get(0);
+            String id = getSecretObjectives().getFirst();
             Player player = getPlayer(userID);
             if (player != null) {
                 removeSOFromGame(id);
@@ -3018,7 +3039,7 @@ public class Game extends GameProperties {
 
     public boolean validateAndSetSecretObjectiveDeck(GenericInteractionCreateEvent event, DeckModel deck) {
         for (Player player : getPlayers().values()) {
-            if (player.getSecrets().size() > 0) {
+            if (!player.getSecrets().isEmpty()) {
                 MessageHelper.sendMessageToChannel(event.getMessageChannel(),
                     "Cannot change secret objective deck to **" + deck.getName()
                         + "** while there are secret objectives in player hands.");
@@ -3031,7 +3052,7 @@ public class Game extends GameProperties {
     }
 
     public boolean validateAndSetExploreDeck(GenericInteractionCreateEvent event, DeckModel deck) {
-        if (getAllExploreDiscard().size() > 0) {
+        if (!getAllExploreDiscard().isEmpty()) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Cannot change explore deck to **"
                 + deck.getName() + "** while there are explores in the discard pile.");
             return false;
@@ -3042,7 +3063,7 @@ public class Game extends GameProperties {
     }
 
     public boolean validateAndSetAgendaDeck(GenericInteractionCreateEvent event, DeckModel deck) {
-        if (getDiscardAgendas().size() > 0) {
+        if (!getDiscardAgendas().isEmpty()) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Cannot change agenda deck to **"
                 + deck.getName() + "** while there are agendas in the discard pile.");
             return false;
@@ -3060,7 +3081,7 @@ public class Game extends GameProperties {
     }
 
     public boolean validateAndSetEventDeck(GenericInteractionCreateEvent event, DeckModel deck) {
-        if (getDiscardedEvents().size() > 0) {
+        if (!getDiscardedEvents().isEmpty()) {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Cannot change event deck to **"
                 + deck.getName() + "** while there are events in the discard pile.");
             return false;
@@ -3225,7 +3246,7 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public List<Player> getRealPlayersNDummies() {
-        return getPlayers().values().stream().filter(player -> (player.isRealPlayer() || (player != null && player.isDummy() && player.getColor() != null && !"null".equals(player.getColor()))))
+        return getPlayers().values().stream().filter(player -> player.isRealPlayer() || player.isDummy() && player.getColor() != null && !"null".equals(player.getColor()))
             .collect(Collectors.toList());
     }
 
@@ -3254,12 +3275,16 @@ public class Game extends GameProperties {
 
     @JsonIgnore
     public List<Player> getPlayersWithGMRole() {
+        if (getGuild() == null) return Collections.emptyList();
         List<Role> roles = getGuild().getRolesByName(getName() + " GM", true);
-        Role gmRole = roles.isEmpty() ? null : roles.get(0);
-        return getPlayers().values().stream().filter(player -> {
-            Member user = getGuild().getMemberById(player.getUserID());
-            return user != null && user.getRoles().contains(gmRole);
-        }).collect(Collectors.toList());
+        Role gmRole = roles.isEmpty() ? null : roles.getFirst();
+        List<Player> gmPlayers = getPlayers().values().stream()
+            .filter(player -> {
+                Member user = getGuild().getMemberById(player.getUserID());
+                return user != null && user.getRoles().contains(gmRole);
+            }).toList();
+        setFogOfWarGMIDs(gmPlayers.stream().map(Player::getUserID).toList()); // For @ExportableField (Website)
+        return gmPlayers;
     }
 
     @JsonIgnore
@@ -4130,9 +4155,7 @@ public class Game extends GameProperties {
         Map<Integer, Integer> oldTGs = getScTradeGoods();
         setScTradeGoods(new LinkedHashMap<>());
         setScSetID(strategyCardModel.getAlias());
-        strategyCardModel.getStrategyCardModels().forEach(scModel -> {
-            setScTradeGood(scModel.getInitiative(), oldTGs.getOrDefault(scModel.getInitiative(), 0));
-        });
+        strategyCardModel.getStrategyCardModels().forEach(scModel -> setScTradeGood(scModel.getInitiative(), oldTGs.getOrDefault(scModel.getInitiative(), 0)));
     }
 
     @JsonIgnore
@@ -4249,5 +4272,15 @@ public class Game extends GameProperties {
 
     public void resetWebsiteOverlays() {
         setWebsiteOverlays(new HashMap<>());
+    }
+
+    @JsonIgnore
+    public String getGameStatsDashboardJSON() {
+        return new GameStatsDashboardPayload(this).getJson();
+    }
+
+    public void addHistoricalGameStatsDashboardPayload() {
+        GameStatsDashboardPayload payload = new GameStatsDashboardPayload(this);
+        getHistoricalGameStatsDashboardPayloads().put(Timestamp.from(Instant.now()), payload);
     }
 }
