@@ -18,15 +18,9 @@ import java.util.concurrent.ThreadLocalRandom;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
-
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonSetter;
-
 import lombok.Getter;
 import lombok.Setter;
 import net.dv8tion.jda.api.EmbedBuilder;
@@ -40,6 +34,10 @@ import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
 import net.dv8tion.jda.api.requests.restaction.ThreadChannelAction;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import ti4.AsyncTI4DiscordBot;
 import ti4.buttons.Buttons;
 import ti4.commands.leaders.CommanderUnlockCheck;
@@ -875,10 +873,8 @@ public class Player {
             return true;
         } else if (getPromissoryNotesInPlayArea().contains(Constants.NAALU_PN)) {
             return true;
-        } else if (getGame().getStoredValue("naaluPNUser").equalsIgnoreCase(getFaction())) {
-            return true;
-        }
-        return false;
+        } else
+            return getGame().getStoredValue("naaluPNUser").equalsIgnoreCase(getFaction());
     }
 
     public Set<String> getUnitsOwned() {
@@ -887,9 +883,8 @@ public class Player {
 
     @JsonIgnore
     public Set<String> getSpecialUnitsOwned() {
-        Set<String> specialUnits = new HashSet<>(unitsOwned.stream()
-            .filter(u -> Mapper.getUnit(u).getFaction().isPresent())
-            .collect(Collectors.toSet()));
+        Set<String> specialUnits = unitsOwned.stream()
+            .filter(u -> Mapper.getUnit(u).getFaction().isPresent()).collect(Collectors.toSet());
         return specialUnits;
     }
 
@@ -956,11 +951,11 @@ public class Player {
             return null;
         }
         if (allUnits.size() == 1) {
-            return allUnits.get(0);
+            return allUnits.getFirst();
         }
         allUnits.sort((d1, d2) -> getUnitModelPriority(d2, unitHolder) - getUnitModelPriority(d1, unitHolder));
 
-        return allUnits.get(0);
+        return allUnits.getFirst();
     }
 
     private Integer getUnitModelPriority(UnitModel unit, UnitHolder unitHolder) {
@@ -1192,6 +1187,9 @@ public class Player {
         return Mapper.getSecretObjective(idToRemove);
     }
 
+    /**
+     * @return Map of (SecretObjectiveModel ID, Random Number ID)
+     */
     public Map<String, Integer> getSecretsScored() {
         return secretsScored;
     }
@@ -1445,7 +1443,7 @@ public class Player {
         return getRepresentation(false, true);
     }
 
-        /**
+    /**
      * @return [FactionEmoji][PlayerPing][ColorEmoji][ColorName] even in Fog of War (will reveal faction/name)
      */
     @JsonIgnore
@@ -1661,7 +1659,7 @@ public class Player {
     }
 
     public boolean isAFK() {
-        if (getHoursThatPlayerIsAFK().length() < 1) {
+        if (getHoursThatPlayerIsAFK().isEmpty()) {
             return false;
         }
         String[] hoursAFK = getHoursThatPlayerIsAFK().split(";");
@@ -1795,7 +1793,7 @@ public class Player {
     }
 
     public void addHourThatIsAFK(String hour) {
-        if (hoursThatPlayerIsAFK.length() < 1) {
+        if (hoursThatPlayerIsAFK.isEmpty()) {
             hoursThatPlayerIsAFK = hour;
         } else {
             hoursThatPlayerIsAFK = hoursThatPlayerIsAFK + ";" + hour;
@@ -2364,7 +2362,7 @@ public class Player {
             exhaustPlanet("custodiavigilia");
 
             if (getPlanets().contains(Constants.MR)) {
-                Planet mecatolRex = (Planet) getGame().getPlanetsInfo().get(Constants.MR);
+                Planet mecatolRex = getGame().getPlanetsInfo().get(Constants.MR);
                 if (mecatolRex != null) {
                     PlanetModel custodiaVigilia = Mapper.getPlanet("custodiavigilia");
                     mecatolRex.setSpaceCannonDieCount(custodiaVigilia.getSpaceCannonDieCount());
@@ -2401,7 +2399,7 @@ public class Player {
         if ("iihq".equalsIgnoreCase(techID)) {
             removePlanet("custodiavigilia");
             if (getPlanets().contains(Constants.MR)) {
-                Planet mecatolRex = (Planet) getGame().getPlanetsInfo().get(Constants.MR);
+                Planet mecatolRex = getGame().getPlanetsInfo().get(Constants.MR);
                 if (mecatolRex != null) {
                     mecatolRex.setSpaceCannonDieCount(0);
                     mecatolRex.setSpaceCannonHitsOn(0);
@@ -2411,7 +2409,7 @@ public class Player {
 
         // Update Owned Units when Researching a Unit Upgrade
         TechnologyModel techModel = Mapper.getTech(techID);
-        if (techID == null)
+        if (techID == null || techModel == null)
             return;
 
         if (techModel.isUnitUpgrade()) {
@@ -2435,7 +2433,7 @@ public class Player {
                     .map(UnitModel::getId)
                     .filter(id -> id.contains(unitModel.getBaseType())).findFirst()
                     .orElse(replacementUnit);
-            } else if (relevantTechs.size() > 0) {
+            } else if (!relevantTechs.isEmpty()) {
                 // Ignore the case where there's multiple faction techs and also
                 replacementUnit = relevantTechs.stream().min(TechnologyModel::sortFactionTechsFirst)
                     .map(TechnologyModel::getAlias)
@@ -2565,7 +2563,7 @@ public class Player {
 
     public void addFogTile(String tileID, String position, String label) {
         fow_seenTiles.put(position, tileID);
-        if (label != null && !".".equals(label) && !"".equals(label)) {
+        if (label != null && !".".equals(label) && !label.isEmpty()) {
             fow_customLabels.put(position, label);
         }
     }
@@ -3001,7 +2999,7 @@ public class Player {
 
     @JsonIgnore
     public boolean isSpeaker() {
-        return getGame().getSpeaker().equals(getUserID());
+        return getGame().getSpeakerUserID().equals(getUserID());
     }
 
     /**
@@ -3056,10 +3054,9 @@ public class Player {
         // }
 
         // DESCRIPTION
-        StringBuilder desc = new StringBuilder();
-        desc.append(Emojis.getColorEmojiWithName(getColor()));
-        desc.append("\n").append(StringUtils.repeat(Emojis.comm, getCommoditiesTotal()));
-        eb.setDescription(desc.toString());
+        String desc = Emojis.getColorEmojiWithName(getColor()) +
+            "\n" + StringUtils.repeat(Emojis.comm, getCommoditiesTotal());
+        eb.setDescription(desc);
 
         // FIELDS
         // Abilities
@@ -3114,8 +3111,7 @@ public class Player {
         eb.setAuthor(getUserName(), null, getUser().getEffectiveAvatarUrl());
 
         // FOOTER
-        StringBuilder foot = new StringBuilder();
-        eb.setFooter(foot.toString());
+        eb.setFooter("");
 
         eb.setColor(Mapper.getColor(color).primaryColor());
         return eb.build();
@@ -3138,7 +3134,7 @@ public class Player {
             if (ButtonHelper.getTilesOfPlayersSpecificUnits(game, this, UnitType.Flagship).isEmpty()) {
                 return null;
             }
-            return ButtonHelper.getTilesOfPlayersSpecificUnits(game, this, UnitType.Flagship).get(0);
+            return ButtonHelper.getTilesOfPlayersSpecificUnits(game, this, UnitType.Flagship).getFirst();
         }
         if (!faction.contains("franken") && game.getTile(AliasHandler.resolveTile(faction)) != null) {
             return game.getTile(AliasHandler.resolveTile(faction));
